sw/source/filter/ww8/ww8par3.cxx
@@ -1785,8 +1785,11 @@ void SwWW8ImplReader::RegisterNumFormatOnTextNode(sal_uInt16 nCurrentLFO,
         return;
 
     if (bSetAttr && pTextNd->GetNumRule() != pRule
-        && pTextNd->GetNumRule() != m_rDoc.GetOutlineNumRule())
+        && (pTextNd->GetNumRule() != m_rDoc.GetOutlineNumRule()
+            || pRule != m_pChosenWW8OutlineStyle))
     {
+        // Now this is either not a part of Chapter Numbering,
+        // or else it is using a different numRule than the one copied to Chapter Numbering.
         pTextNd->SetAttr(SwNumRuleItem(pRule->GetName()));
     }
     pTextNd->SetAttrListLevel(nCurrentLevel);
